--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,25 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  username: postgres #Or a new user you set up inside pgadmin
+  password: 1221
+  host: localhost
+ 
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: my_database_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: my_database_development
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: my_database_production
